Order, Product and Customer SWAGGER docs
