# routes/product_routes.py
@@ -6,5 +6,5 @@ product_bp = Blueprint('products', __name__)
 product_bp.route('/', methods=['POST'])(save_product)
 product_bp.route('/', methods=['GET'])(get_products)
 product_bp.route('/<int:product_id>', methods=['PUT'])(update_product)
-product_bp.route('/<int:id>', methods=['DELETE'])(delete_product)
+product_bp.route('/<int:product_id>', methods=['DELETE'])(delete_product)
 product_bp.route('/paginate', methods= ['GET'])(find_all_paginate)
